# nomad-chat

./: LICENSE  README.md  build.sh  nomad-chat.cabal  nomad-chat.service  stack.yaml
app/: Main.hs
public/: index.html  room.html  test.html
src/: Messages.hs  MiddlewareUtil.hs  OutMessages.hs  RoomsService.hs  TransformerTest.hs  Types.hs  UnixProdMode.hs
