name:                nomad-chat
version:             0.2.1
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/nomad-chat#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , RoomsService
                     , MiddlewareUtil
                     , UnixProdMode
                     , Messages
                     , OutMessages
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , case-insensitive
                     , containers
                     , data-default-class
                     , mtl
                     , random
                     , scotty
                     , time
                     , text
                     , text-show
                     , uuid
                     , wai-websockets
                     , wai
                     , warp
                     , websockets
  default-language:    Haskell2010
  if os(windows)
    cpp-options:         -DOS_Windows
  else
    build-depends:       unix



executable nomad-chat-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , blaze-builder
                     , bytestring
                     , cookie
                     , case-insensitive
                     , data-default-class
                     , filepath
                     , http-types
                     , nomad-chat
                     , scotty
                     , text-show
                     , uuid
                     , wai-middleware-static
                     , websockets
                     , wai-websockets
                     , wai
                     , text
  default-language:    Haskell2010

test-suite nomad-chat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nomad-chat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/nomad-chat
